add app structure

--- a/employee-app/src/main/resources/application.properties
+++ b/employee-app/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=employee-app
+
+#Tomcat configuration
+server.port=9001
+
+#Log level configuration
+logging.level.root=ERROR
+logging.level.com.employee=INFO
+logging.level.org.springframework.boot.web.embedded.tomcat=INFO
+
+com.employee.employeeapp.apiUrl=http://localhost:9000
